force-app/main/default/objects/Hygiene_Account_Flag__c/Hygiene_Account_Flag__c.object-meta.xml
        <CustomObject>
          <label>Hygiene Account Flag</label>
          <pluralLabel>Hygiene Account Flags</pluralLabel>
          <description>Per-account hygiene finding. Used for KYC, NDA, Short Code, contract-expired, AUM-stale, and whitespace signals.</description>
          <sharingModel>ReadWrite</sharingModel>
          <nameField>
  <label>Auto Number</label>
  <type>AutoNumber</type>
  <displayFormat>HYG-{0000000}</displayFormat>
</nameField>
        </CustomObject>