force-app/main/default/objects/Hygiene_Account_Flag__c/fields/Account__c.field-meta.xml
    <CustomField>
      <fullName>Account__c</fullName>
      <label>Account</label>
      <type>Lookup</type>
      <referenceTo>Account</referenceTo>
<relationshipName>HygieneAccountFlags</relationshipName>
<deleteConstraint>SetNull</deleteConstraint>
    </CustomField>