force-app/main/default/objects/Hygiene_Account_Flag__c/fields/AuM__c.field-meta.xml
    <CustomField>
      <fullName>AuM__c</fullName>
      <label>AuM (denorm, b)</label>
      <type>Number</type>
      <precision>10</precision>
<scale>2</scale>
    </CustomField>