force-app/main/default/objects/Hygiene_Account_Flag__c/fields/Category__c.field-meta.xml
<CustomField>
  <fullName>Category__c</fullName>
  <label>Category</label>
  <type>Text</type>
  <length>80</length>
</CustomField>