force-app/main/default/objects/Hygiene_Account_Flag__c/fields/Owner_User__c.field-meta.xml
    <CustomField>
      <fullName>Owner_User__c</fullName>
      <label>Owner (User)</label>
      <type>Lookup</type>
      <referenceTo>User</referenceTo>
<relationshipName>HygieneAccountFlagsOwned</relationshipName>
<deleteConstraint>SetNull</deleteConstraint>
    </CustomField>