force-app/main/default/objects/Hygiene_Account_Flag__c/fields/Territory__c.field-meta.xml
<CustomField>
  <fullName>Territory__c</fullName>
  <label>Territory (denorm)</label>
  <type>Text</type>
  <length>80</length>
</CustomField>